Make chromevox default action simulation go through OnEvent.

A child class (ie, LoginPinView) may override OnEvent and not OnMouseEvent. The
default OnEvent implementation dispatches to OnMouseEvent so existing uses
should remain the same, at the cost of an additional function call.

Bug: 848018
Change-Id: I20ce712ceadeeda8738eb83d450d9390daedf949
Reviewed-on: https://chromium-review.googlesource.com/1079890
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564649}
Former-commit-id: 7e5a163fb6e971b970ca1b62219f5ccdc5f47823